# ikt103

./: README.md
assignment_2_1/: CMakeLists.txt  main.cpp
assignment_3_1/: CMakeLists.txt  customers.csv  main.cpp  orders.csv  products.csv
assignment_3_1/rapidcsv/: rapidcsv.h
assignment_3_2/: CMakeLists.txt  main.cpp  student.h  students.json
assignment_4_1/: CMakeLists.txt  main.cpp  school.sqlite
exam/: CMakeLists.txt  car_rental.json  car_rental.sqlite  main.cpp
